--- a/commons.gradle
+++ b/commons.gradle
@@ -3,16 +3,29 @@ dependencies {
     implementation "androidx.core:core-ktx:$core_ktx_version"
 
     testImplementation "junit:junit:$junitVersion"
-    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoCoreVersion"
+    testImplementation "org.mockito:mockito-core:3.3.1"
+    testImplementation "io.kotlintest:kotlintest:2.0.7"
 
+    testImplementation "org.powermock:powermock-module-junit4-rule:2.0.0-beta.5"
+    testImplementation "org.powermock:powermock-core:2.0.0-beta.5"
+    testImplementation "org.powermock:powermock-module-junit4:2.0.0-beta.5"
+    testImplementation "org.powermock:powermock-api-mockito2:2.0.0-beta.5"
+
+    implementation "androidx.test.espresso.idling:idling-concurrent:3.4.0"
+    implementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
+
+    testImplementation "androidx.test.ext:junit:$junitExtVersion"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$mockWebserverVersion"
+    testImplementation "io.mockk:mockk:$mockVersion"
+
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoCoreVersion"
+    androidTestImplementation "androidx.test:runner:1.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    androidTestImplementation "androidx.test:rules:1.4.0"
     androidTestImplementation "androidx.test.ext:junit:$junitExtVersion"
     androidTestImplementation "androidx.test:rules:$testXRulesVersion"
     androidTestImplementation "android.arch.core:core-testing:$coreTestingVersion"
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:$mockWebserverVersion"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
-
-    testImplementation "androidx.test.ext:junit:$junitExtVersion"
-    testImplementation "android.arch.core:core-testing:$coreTestingVersion"
-    testImplementation "com.squareup.okhttp3:mockwebserver:$mockWebserverVersion"
-    testImplementation "io.mockk:mockk:$mockVersion"
 }
